# practice

./: 4 types of operators  Special class implementation (singleton mode)  c++ io  date.cpp  date.h  hash.hpp  set_practice  string.cpp  string.h  源.cpp
5.Reactor/: CMakeLists.txt  Calculator.hpp  ClientCal.cc  Comm.hpp  Epoller.hpp  Main.cc  Protocol.hpp  Socket.hpp  TcpServer.hpp  nocopy.hpp
AvlTree/: avl.hpp  code  code.cpp
Concurrency_Memory_Pool/code/: CMakeLists.txt  central_cache.hpp  concurrent.hpp  fixed_length_memorypool.hpp  helper.hpp  list.hpp  page_cache.hpp  test_Fixed_length.cpp  test_alloc  test_alloc.cpp  thread_cache.hpp
File_operation_exercise/: code  code.c  log.txt  test  test.c
Linear_Storage/: code.cpp
Payroll_Management/: code  code.cpp  employee.hpp  employee_data.txt  info.hpp
RB_Tree/: RB_Tree.hpp  code  code.cpp
Search_Engines/: CMakeLists.txt  asssistance.hpp  index.cpp  parser.cpp
Search_Engines/code/: CMakeLists.txt  Log.hpp  assistance.hpp  index.hpp  mysql.hpp  parser.cpp  searcher.hpp  server.cpp
bitSet/: BloomFilter.hpp  bit_set.hpp  code  code.cpp  makefile
bs_tree/: BsTree.hpp  code  code.cpp
calculator/: code  code.cpp
code/: CMakeLists.txt  assistance.hpp  index.hpp  parser.cpp  test.cpp
cp/: BlockQueue.hpp  Task.cpp  Task.hpp  a.out  code  code.cpp  makefile  mypro
cp_ring/: code  code.cpp  ring_queue.hpp
epoll/: CMakeLists.txt  myepoll.hpp  server.cpp  server.hpp  socket.hpp
exec/: code  code.c  makefile  test  test.c  test.py
fcntl/: code  code.cpp  makefile
file_homework/: code  code.c
fork_practice/: fork_practice  fork_practice.c  makefile
hash/: code  code.cpp  hash.hpp  hash_table.hpp  unordered_map.hpp  unordered_set.hpp
http/: Serialization.hpp  http_server  http_server.hpp  makefile  server.cpp
keyboard_interrupt/: .code.ko.cmd  .code.mod.o.cmd  .code.o.cmd  .test_inter.ko.cmd  .test_inter.mod.o.cmd  .test_inter.o.cmd  Makefile  code.c  code.ko  code.mod.c  modules.order  test_inter.c  test_inter.ko  test_inter.mod.c
links/: makefile  soft
linux_practice/: code  code.c  makefile  refresh  refresh.c  refresh_in_place  refresh_in_place.c
reactor/: CMakeLists.txt  client.cpp  client.hpp  myepoll.hpp  nocopy.hpp  server.cpp  server.hpp  socket.hpp
(+230 files in other folders)
